--- a/registro/registro.html
+++ b/registro/registro.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
     <title>Inicio de sesion - SpaceX</title>
@@ -14,9 +14,9 @@
     <section class="login">
         <section class="login__container">
             <h2>Inicio Sesión</h2>
-            <form action="" class="login__container--form">
-                <input type="text" class="input" placeholder="Correo">
-                <input type="password" class="input" placeholder="Contraseña">
+            <form class="login__container--form">
+                <input class="input" type="text" placeholder="Correo">
+                <input class="input" type="password" placeholder="Contraseña">
                 <button class="button">Iniciar Sesión</button>
                 <div class="login__container--remember-me">
                     <label>
@@ -26,14 +26,16 @@
                 </div>
             </form>
             <section class="login__container--social-media">
-                <div><img src=".//icons/black-logo-de-google-24.png" alt="Google">Inicia Sesion con Google</div>
-                <div><img src=".//icons/twitter-black-24.png" alt="Twitter">Inicia sesion con Twitter</div>
+                <div><img src="https://img.icons8.com/office/16/000000/google-logo.png" alt="Google">Inicia Sesion con Google</div>
+                <div><img src="https://img.icons8.com/fluent/48/000000/twitter.png" alt="Twitter">Inicia sesion con Twitter</div>
             </section>
             <p class="login__container--register">No tienes ninguna cuenta <a href="/">Registrate</a></p>
         </section>
     </section>
     <footer class="footer">
-        <a href=""></a>
+        <a href="/">Terminos de uso</a>
+        <a href="/">Declaración de privacidad</a>
+        <a href="/">Centro de ayuda</a>
     </footer>
 </body>
 </html>
