Corrigiendo el margen izquierdo del inicio de sesion

--- a/registro/registro.html
+++ b/registro/registro.html
@@ -2,34 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../registro/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
-    <title>Inicio de sesion - SpaceX</title>
+    <title>Registro - SpaceX</title>
 </head>
 <body>
     <header class="header">
-        <img src="../proyectofinal/assets/1200px-SpaceX_logo_black.svg.png" alt="">
+        <img src="../assets/1200px-SpaceX_logo_black.svg.png" alt="">
     </header>
-    <section class="login">
-        <section class="login__container">
-            <h2>Inicio Sesión</h2>
-            <form class="login__container--form">
+    <section class="register">
+        <section class="register__container">
+            <h2>Registro</h2>
+            <form class="register__container--form">
+                <input class="input" type="text" placeholder="Nombre">
                 <input class="input" type="text" placeholder="Correo">
                 <input class="input" type="password" placeholder="Contraseña">
-                <button class="button">Iniciar Sesión</button>
-                <div class="login__container--remember-me">
+                <button class="button">Registrarme</button>
+                <div class="register__container--remember-me">
                     <label>
                         <input type="checkbox" id="cbox1" value="checkbos">Recuérdame
                     </label>
                     <a href="/">Olvide mi Contraseña</a>
                 </div>
             </form>
-            <section class="login__container--social-media">
+            <section class="register__container--social-media">
                 <div><img src="https://img.icons8.com/office/16/000000/google-logo.png" alt="Google">Inicia Sesion con Google</div>
                 <div><img src="https://img.icons8.com/fluent/48/000000/twitter.png" alt="Twitter">Inicia sesion con Twitter</div>
             </section>
-            <p class="login__container--register">No tienes ninguna cuenta <a href="/">Registrate</a></p>
+            <p class="register__container--register">No tienes ninguna cuenta <a href="/">Registrate</a></p>
         </section>
     </section>
     <footer class="footer">
